--- a/src/OT.Assessment.App/OT.Assessment.App.csproj
+++ b/src/OT.Assessment.App/OT.Assessment.App.csproj
@@ -14,4 +14,8 @@
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.2" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\..\test\OT.Assessment.Tester\OT.Assessment.Tester.csproj" />
+	</ItemGroup>
+
 </Project>
