--- a/src/OT.Assessment.App/OT.Assessment.App.csproj
+++ b/src/OT.Assessment.App/OT.Assessment.App.csproj
@@ -15,6 +15,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\OT.Assessment.ServiceDefaults\OT.Assessment.ServiceDefaults.csproj" />
 	  <ProjectReference Include="..\..\test\OT.Assessment.Tester\OT.Assessment.Tester.csproj" />
 	</ItemGroup>
 
