Down to two test errors, to fix and dev test

--- a/OT.Assessment.AppHost/OT.Assessment.AppHost.csproj
+++ b/OT.Assessment.AppHost/OT.Assessment.AppHost.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\src\OT.Assessment.App\OT.Assessment.App.csproj" />
+    <ProjectReference Include="..\src\OT.Assessment.Consumer\OT.Assessment.Consumer.csproj" />
   </ItemGroup>
 
 </Project>
