--- a/src/OT.Assessment.Consumer/OT.Assessment.Consumer.csproj
+++ b/src/OT.Assessment.Consumer/OT.Assessment.Consumer.csproj
@@ -13,7 +13,15 @@
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+	</ItemGroup>
+
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\OT.Assessment.Data\OT.Assessment.Data.csproj" />
+	  <ProjectReference Include="..\..\OT.Assessment.ServiceDefaults\OT.Assessment.ServiceDefaults.csproj" />
+	  <ProjectReference Include="..\OT.Assessment.App\OT.Assessment.App.csproj" />
 	</ItemGroup>
 
 
